[package]
name = "rust-bitcoin-test"
version = "0.1.0"
authors = ["kanna <kanna@vivaldi.net>"]
edition = "2018"

[dependencies]
keys = { path = "keys" }
script = { path = "script" } 
rpc = { path = "rpc" }
chain = { path = "chain" }
primitives = { path = "primitives" }
serialization = { path = "serialization" }
network = { path = "network" }
